<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/app_icon"
        android:src="@drawable/start_icon2"
        android:layout_width="200dp"
        android:layout_height="100dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/app_title"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/welcome_message"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcome_btnSignIn"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        android:text="@string/sign_in"
        android:textSize="13sp"
        android:textStyle="bold"
        android:backgroundTint="@color/black"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="50dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcome_btnSignUp"
        android:textAllCaps="false"
        app:cornerRadius="20dp"
        android:text="@string/sign_up"
        android:textSize="13sp"
        android:textStyle="bold"
        android:backgroundTint="@color/white"
        app:strokeColor="@color/black"
        app:strokeWidth="1.5dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="50dp"/>

</LinearLayout>