<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".SignInActivity">

    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/signIn_progressBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:src="@drawable/start_icon2"
            android:layout_width="150dp"
            android:layout_height="100dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_marginTop="25dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginTop="25dp"
            android:layout_width="250dp"
            android:layout_height="45dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signIn_etEmail"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/ic_lock"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginTop="10dp"
            android:layout_width="250dp"
            android:layout_height="45dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signIn_etPassword"
                android:inputType="textPassword"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvForgotPassword"
                android:gravity="end"
                android:text="@string/forgot_password"
                android:textSize="12sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="20dp"
            android:id="@+id/signIn_btnSignIn"
            android:textAllCaps="false"
            app:cornerRadius="20dp"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textSize="13sp"
            android:backgroundTint="@color/black"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="50dp"/>

        <TextView
            android:id="@+id/signIn_tvSignUp"
            android:text="@string/no_account"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>