<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/signUp_progressBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:src="@drawable/start_icon2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            tools:ignore="ContentDescription" />


        <RadioGroup
            android:layout_width="150dp"
            android:layout_height="50dp" >

            <RadioButton
                android:id="@+id/curator"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="Curator" />

            <RadioButton
                android:id="@+id/project_leader"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="Project Leader" />
        </RadioGroup>

        <TextView
            android:layout_marginTop="25dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/impactio_teal"
            app:hintTextColor="@color/impactio_teal"
            android:hint="Full Name"
            app:startIconDrawable="@drawable/ic_person"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginTop="10dp"
            android:layout_width="250dp"
            android:layout_height="45dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUp_etFullName"
                android:inputType="textPersonName"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/impactio_teal"
            app:hintTextColor="@color/impactio_teal"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginTop="10dp"
            android:layout_width="250dp"
            android:layout_height="45dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUp_etEmail"
                android:inputType="textEmailAddress"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/impactio_teal"
            app:hintTextColor="@color/impactio_teal"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/ic_lock"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginTop="10dp"
            android:layout_width="250dp"
            android:layout_height="45dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUp_etPassword"
                android:inputType="textPassword"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/impactio_teal"
            app:hintTextColor="@color/impactio_teal"
            android:hint="Confirm Password"
            app:startIconDrawable="@drawable/ic_lock"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginTop="10dp"
            android:layout_width="250dp"
            android:layout_height="45dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUp_etConfirmPassword"
                android:inputType="textPassword"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_gravity="center"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:text="@string/signup_agreement"
            android:layout_width="245dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUp_btnSignUp"
            android:textAllCaps="false"
            app:cornerRadius="20dp"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textSize="13sp"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/impactio_teal"
            app:strokeWidth="1.5dp"
            android:textColor="@color/impactio_teal"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="50dp"/>

        <TextView
            android:id="@+id/signUp_tvSignIn"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/existing_account"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>